[project]
name = "bchosttrust"
description = "Blockchain solution to domain name trustworthy"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "plyvel==1.5.0",
    "type-enforced==1.2.0",
    "click==8.1.7",
    "anytree==2.12.1"
]
authors = [
    {name = "Marco Pui", email = "marcopui5507@gmail.com"},
    {name = "Cato Yiu", email = "root@1f616emo.xyz"},
    {name = "Lewis Chen", email = "bestnoodles101@gmail.com"},
    {email = "bchosttrust@1f616emo.xyz"}
]
requires-python = ">= 3.10"
classifiers = [ # See https://pypi.org/classifiers/
  "Development Status :: 2 - Pre-Alpha",

  "Intended Audience :: Developers",
  "Topic :: System :: Networking",
  "Environment :: Web Environment",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
bcht = "bchosttrust.__main__:cli"
