[project]
name = "bchosttrust"
description = "Blockchain solution to domain name trustworthy"
readme = "README.md"
version = "0.0.4"
dependencies = [
    "anytree==2.12.1",
    "click==8.1.7",
    "lazy_loader==0.3",
    "plyvel==1.5.0",
    "typeguard==4.1.5",
]
authors = [
    {name = "Cato Yiu", email = "root@1f616emo.xyz"},
    {name = "Marco Pui", email = "marcopui5507@gmail.com"},
    {name = "Lewis Chen", email = "bestnoodles101@gmail.com"},
    {email = "bchosttrust@1f616emo.xyz"}
]
requires-python = "== 3.11.*"
classifiers = [ # See https://pypi.org/classifiers/
  "Development Status :: 2 - Pre-Alpha",

  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",

  "Intended Audience :: Developers",
  "Topic :: System :: Networking",
  "Environment :: Web Environment",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
bcht = "bchosttrust.__main__:cli"
